# codemap-diagnostic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs
src/: emitter.rs  lib.rs  lock.rs  snippet.rs
