[package]
name = "codemap-diagnostic"
version = "0.1.0"
authors = ["Kevin Mehall <km@kevinmehall.net>", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kevinmehall/codemap"
documentation = "https://docs.rs/codemap-diagnostic"
description = """
Data structures for representing compiler error/diagnostic messages, built on the `codemap` crate.
"""
readme = "README.md"
keywords = ["compiler", "error", "warning", "rustc"]
categories = ["command-line-interface"]

[dependencies]
codemap = { version = "0.1.0" }
isatty = "0.1.3"
term = "0.4"
